--- a/style.css
+++ b/style.css
@@ -1430,6 +1430,10 @@ body.dark-mode nav a:hover {
   color: #ffffff;
 }
 
+body.dark-mode .hamburger .bar {
+  background-color: #ffffff;
+}
+
 /* TYPOGRAPHY */
 body.dark-mode h1,
 body.dark-mode h2,
